2014-11-07  Michael Albinus  <michael.albinus@gmx.de>

	* callproc.c (encode_current_directory): Support handling of file
	names prepended by "/:".  (Bug#18891)

2014-11-06  Alan Mackenzie  <acm@muc.de>

	* syntax.c (back_comment): Fix off-by-one error (bug#18022).

2014-11-06  Dima Kogan  <dima@secretsauce.net>

	* xgselect.c (xg_select): Use g_main_context_acquire (bug#18861).

2014-11-05  Michael Albinus  <michael.albinus@gmx.de>

	* dired.c (Ffile_attributes): Return Qnil, if Fexpand_file_name
	raises an error.  (Bug#18891)

2014-11-03  Eli Zaretskii  <eliz@gnu.org>

	* xdisp.c (Fdump_glyph_matrix, Fdump_frame_glyph_matrix): Doc fix.
	(Fdump_frame_glyph_matrix): Don't segfault if invoked on a GUI
	frame; instead, print an error message.

2014-11-03  Jan Djärv  <jan.h.d@swipnet.se>

	* nsfns.m (ns_set_doc_edited): Check for FRAME_NS (Bug#18925).

2014-10-31  Jan Djärv  <jan.h.d@swipnet.se>

	* macfont.m (macfont_glyph_extents): Turn off syntetic bold
	if force_integral_p (i.e. no antialias).
	(macfont_draw): Check ns_antialias_text, also turn off syntetic
	bold if no antialias (Bug#18876).

	* emacs.c (main): Don't chdir to $HOME on Cocoa if --chdir
	was given (Bug#18846).

2014-10-30  Jan Djärv  <jan.h.d@swipnet.se>

	* nsterm.h (ns_set_doc_edited): Declare taking no args.

	* nsfns.m (ns_set_doc_edited): Do all logic (check frames) here
	instead of in xdisp.c, function now takes void. (Bug#18884).

	* xdisp.c (prepare_menu_bars): Remove HAVE_NS code.
	(redisplay_internal): Call ns_set_doc_edited if HAVE_NS (Bug#18884).

	* nsterm.h (EmacsScroller): Replace Lisp_Object win with
	struct window* (Bug#18889).
	Remove getMouseMotionPart.
	(ns_output): Make icon_top/left int.

	* nsfns.m (x_icon): icon_top/left is int.

	* nsterm.m (ns_mouse_position): Remove unused code.
	(initFrame:window:, dealloc): Use window instead of win.
	(getMouseMotionPart:window:x:y:): Remove, unused.
	(sendScrollEventAtLoc:fromEvent:): Make Lisp_Object win from window.
